v1
Removed tools and environment sections from Jenkinsfile.